--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -50,7 +50,7 @@ b{
   line-height: 1.5em;
   margin: 0;
   width: 100%;
-  height: calc(100% - 4em);
+  height: calc(100% - 5em);
   position: absolute;
   top: 2em;
   left: 0;
@@ -85,7 +85,7 @@ b{
   left: 0;
   /* overflow: hidden; */
   user-select: none;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 .header .left{
   position: absolute;
@@ -108,6 +108,7 @@ b{
   right: 0;
   background: black;
   padding-left: 1em;
+  text-align: right;
 }
 #transport{
   margin-left: 0.4em;
@@ -179,7 +180,9 @@ b{
 }
 @media (max-width: 912px){
   .shortcut,
-  .detail{
+  .detail,
+  .header .center,
+  .ui-break{
     display: none;
   }
   .footer .center{
