--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -37,10 +37,10 @@ b{
 }
 .container{
   position: fixed;
-  top: 1em;
-  left: 1em;
-  width: calc(100% - 2em);
-  height: calc(100% - 2em);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 #input,
 #help{
@@ -49,11 +49,11 @@ b{
   font-size: 1em;
   line-height: 1.5em;
   margin: 0;
-  width: 100%;
-  height: calc(100% - 5em);
+  width: calc(100% - 2em);
+  height: calc(100% - 2em);
   position: absolute;
-  top: 2em;
-  left: 0;
+  top: 1em;
+  left: 1em;
   border: 0;
   background: transparent;
   outline: none;
@@ -86,6 +86,7 @@ b{
   /* overflow: hidden; */
   user-select: none;
   /* pointer-events: none; */
+  display: none;
 }
 .header .left{
   position: absolute;
@@ -137,6 +138,7 @@ b{
   /* overflow: hidden; */
   user-select: none;
   /* pointer-events: none; */
+  display: none;
 }
 .footer .left{
   position: absolute;
